# Blackthorn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
assets/shaders/: default.frag  default.vert  font.frag  font_bitmap.frag  font_bitmap.vert  font_ttf.frag  font_ttf.vert
engine/: CMakeLists.txt
engine/include/Assets/: AssetHandle.h  AssetManager.h  AssetStorage.h  IAsset.h  IAssetLoader.h  IAssetStorage.h  LoadParams.h
engine/include/Assets/Loaders/: BitmapFontLoader.h  ShaderLoader.h  TextureLoader.h  TrueTypeFontLoader.h
engine/include/Core/: Engine.h  EngineConfig.h  Export.h
engine/include/Debug/: Profiler.h
engine/include/ECS/: ComponentArray.h  Detail.h  Entity.h  EntityPool.h  IComponentArray.h  ISystem.h  SystemManager.h  World.h
engine/include/ECS/Components/: Kinematics.h  Sprite.h  Tag.h  Transform.h
engine/include/ECS/Systems/: KinematicsSystem.h  RenderSystem.h
engine/include/Engine/: Engine.h
engine/include/Fonts/: BitmapFont.h  Font.h  TextAlign.h  TextCacheKey.h  TrueTypeFont.h
engine/include/Graphics/: EBO.h  FBO.h  GlobalUBO.h  Renderer.h  Shader.h  Texture.h  UBO.h  VAO.h  VBO.h
engine/include/Input/: InputManager.h
engine/include/Scene/: IScene.h  SceneManager.h
engine/include/Utils/: LRUCache.h
engine/src/Assets/: AssetHandle.cpp
engine/src/Core/: Engine.cpp
engine/src/Debug/: Profiler.cpp
engine/src/Fonts/: BitmapFont.cpp  TrueTypeFont.cpp
engine/src/Graphics/: EBO.cpp  FBO.cpp  GlobalUBO.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
engine/src/Input/: InputManager.cpp
